# n-f767zi

./: .gitignore  .gitmodules
app/: CMakeLists.txt
app/inc/controllers/: mainController.h
app/src/controllers/: mainController.c
cmake/: Findtoolchain.cmake
lib/STM32F767xx/: CMakeLists.txt
lib/STM32F767xx/core/inc/: stm32f7xx_it.h
lib/STM32F767xx/core/src/: stm32f7xx_it.c
